# mdxnet-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/blueprints/plans/: 2026-07-22-mdx23c-registry-expansion.md
src/mdxnet_infer/: __about__.py  __init__.py  checkpoint_catalog.py  clean_api.py  cli.py  config.py  inference.py  model.py
src/mdxnet_infer/config/: checkpoints.toml
src/mdxnet_infer/utils/: __init__.py  cache.py  download.py  stems.py
tests/: test_checkpoint_catalog.py  test_clean_api.py  test_device_lifecycle_contract.py  test_imports.py  test_lifecycle.py  test_model.py
